--- a/TablesANDMedia/TablesCSSCode_v2.html
+++ b/TablesANDMedia/TablesCSSCode_v2.html
@@ -25,45 +25,11 @@ img {
   height: 100px;
   width: 300px;
   }
-
-  ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        background-color: black;
-        display: flex;
-        position: fixed;
-        top: 0;
-        width: max-content;
-        height: 50px;
-    }
-
-    a {
-        display: block;
-        color: white;
-        padding: 20px 30px;
-        text-decoration: none;
-    }
-
-    a:hover {
-        background-color: grey;
-        padding: 20px 30px;
-    }
 </style>
 </head>
 <body>
 
-<ul>
-    <li><a href="https://roycan-digitalgarden.vercel.app/part-1-html-structure-sprint/">Part 1</a></li>
-    <li><a href="https://roycan-digitalgarden.vercel.app/part-2-css-pimp-my-button/">Part 2</a></li>
-    <li><a href="https://roycan-digitalgarden.vercel.app/part-3-emoji-trading-card/">Part 3</a></li>
-    <li><a href="https://roycan-digitalgarden.vercel.app/part-4-flexbox-profile-grid/">Part 4</a></li>
-    <li><a href="https://roycan-digitalgarden.vercel.app/part-5-personal-homepage/">Part 5</a></li>
-</ul>
-
-<br>
-<br>
-<h1><br>Potassium Tuesday Sched !</h1>
+<h1>Potassium Tuesday Sched !</h1>
 
 <table>
       <tr>
@@ -71,7 +37,7 @@ img {
         <th> Subject </th>
         <th> Notes </th>
       </tr>
-      <tr> 
+      <tr>
         <td> 7:30 - 9:00 AM </td>
         <td><img src="phys.png"></td>
         <td><iframe src="https://www.youtube.com/embed/xS-gdFgZel0" title="Analytical Addition of Vectors"></iframe>
