--- a/TablesANDMedia/TablesCSSCode.html
+++ b/TablesANDMedia/TablesCSSCode.html
@@ -34,20 +34,22 @@ img {
         display: flex;
         position: fixed;
         top: 0;
-        width: max-content;
+        width: 100%;
         height: 50px;
+        left: 0;
     }
 
     a {
         display: block;
         color: white;
-        padding: 20px 30px;
+        padding: 20px 20px;
         text-decoration: none;
+        font-size: 20;
     }
 
     a:hover {
         background-color: grey;
-        padding: 20px 30px;
+        padding: 20px 15px;
     }
 </style>
 </head>
